--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/recyclerView"
-            android:name="com.example.android.myapplicationnetradio.RecyclerViewFragment"
+            android:name="com.example.android.myapplicationnetradio.Fragment_Radio_List"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
@@ -80,9 +80,13 @@
 
     </ViewAnimator>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment"
+        android:id="@+id/radio_fragment"
         android:name="com.example.android.myapplicationnetradio.Radio_Fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
