--- a/app/src/main/res/layout/radio_detail.xml
+++ b/app/src/main/res/layout/radio_detail.xml
@@ -29,7 +29,7 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/radioDetail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/element_text" />
