--- a/app/src/main/res/layout/fragment_reader.xml
+++ b/app/src/main/res/layout/fragment_reader.xml
@@ -7,65 +7,52 @@
     android:background="@android:color/black"
     tools:context=".ReaderFragment">
 
-    <TextView
-        android:id="@+id/quality"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/topRaw"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:textColor="@android:color/white"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-    <TextView
-        android:id="@+id/streamFormat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:textColor="@android:color/white"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/quality" />
+        <TextView
+            android:id="@+id/service"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text=""
+            android:textAlignment="viewStart"
+            android:textColor="@android:color/white" />
 
-    <TextView
-        android:id="@+id/service"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:textColor="@android:color/white"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/streamFormat" />
+        <TextView
+            android:id="@+id/quality"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text=""
+            android:textAlignment="center"
+            android:textColor="@android:color/white" />
 
-    <TextView
-        android:id="@+id/bluOsStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:textColor="@android:color/white"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/service" />
-
-    <TextView
-        android:id="@+id/artWorkUrl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:textColor="@android:color/white"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bluOsStatus" />
+        <TextView
+            android:id="@+id/streamFormat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text=""
+            android:textAlignment="viewEnd"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
 
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="350dp"
-
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/artWorkUrl"
+        app:layout_constraintTop_toBottomOf="@+id/topRaw"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
     <TextView
@@ -99,6 +86,17 @@
 
         app:layout_constraintTop_toBottomOf="@+id/title2" />
 
+    <TextView
+        android:id="@+id/bluOsStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"
+        android:textColor="@android:color/white"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/buttonRaw"
+         />
+
     <LinearLayout
         android:id="@+id/buttonRaw"
         android:layout_width="match_parent"
@@ -108,17 +106,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-
-
         <Button
             android:id="@+id/buttonTest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Favorite"
-
             />
-
         <Button
             android:id="@+id/buttonPrevious"
             android:layout_width="wrap_content"
@@ -126,14 +120,12 @@
             android:layout_weight="1"
             android:foreground="@android:drawable/ic_media_previous"
             />
-
         <Button
             android:id="@+id/buttonPlay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Play/Pause" />
-
         <Button
             android:id="@+id/buttonNext"
             android:layout_width="wrap_content"
@@ -141,7 +133,6 @@
             android:layout_weight="1"
             android:foreground="@android:drawable/ic_media_next"
              />
-
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
