--- a/app/src/main/res/layout/radio_detail.xml
+++ b/app/src/main/res/layout/radio_detail.xml
@@ -8,8 +8,10 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
+    android:background="@drawable/grid_item_background"
     android:gravity="center_vertical"
-    android:padding="6dp">
+
+    android:padding="4dp">
 
     <ImageView
         android:id="@+id/imageView"
