--- a/app/src/main/res/layout/fragment_reader.xml
+++ b/app/src/main/res/layout/fragment_reader.xml
@@ -48,43 +48,74 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="0dp"
-        android:layout_height="350dp"
+        android:layout_height="300dp"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topRaw"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
-    <TextView
-        android:id="@+id/title1"
+    <Button
+        android:id="@+id/song"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         android:text="TextView"
+        android:background="@android:color/black"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    <TextView
-        android:id="@+id/title2"
+    <Button
+        android:id="@+id/songinfo"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:background="@android:color/black"
+        android:foreground="@android:drawable/ic_menu_info_details"
+        android:textColor="@android:color/white"
+        app:layout_constraintStart_toEndOf="@id/song"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <Button
+        android:id="@+id/artist"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         android:text="TextView"
+        android:background="@android:color/black"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title1" />
+        app:layout_constraintTop_toBottomOf="@+id/song" />
+    <Button
+        android:id="@+id/artistinfo"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:foreground="@android:drawable/ic_menu_info_details"
+        android:background="@android:color/black"
+        android:textColor="@android:color/white"
+        app:layout_constraintStart_toEndOf="@id/artist"
+        app:layout_constraintTop_toBottomOf="@+id/song" />
 
-    <TextView
-        android:id="@+id/title3"
+    <Button
+        android:id="@+id/album"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         android:text="TextView"
+        android:background="@android:color/black"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/artist" />
+    <Button
+        android:id="@+id/albuminfo"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:foreground="@android:drawable/ic_menu_info_details"
+        android:background="@android:color/black"
+        android:textColor="@android:color/white"
+        app:layout_constraintStart_toEndOf="@id/album"
+        app:layout_constraintTop_toBottomOf="@+id/artist" />
 
-        app:layout_constraintTop_toBottomOf="@+id/title2" />
 
     <TextView
         android:id="@+id/bluOsStatus"
@@ -94,50 +125,62 @@
         android:textColor="@android:color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/buttonRaw"
-         />
+        app:layout_constraintBottom_toTopOf="@id/seekBar"
+        />
 
-    <LinearLayout
-        android:id="@+id/buttonRaw"
+    <SeekBar
+        android:id="@+id/seekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/buttonPlay"/>
 
-        <Button
-            android:id="@+id/buttonTest"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Favorite"
-            />
-        <Button
-            android:id="@+id/buttonPrevious"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:foreground="@android:drawable/ic_media_previous"
-            />
-        <Button
-            android:id="@+id/buttonPlay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Play/Pause" />
-        <Button
-            android:id="@+id/buttonNext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:foreground="@android:drawable/ic_media_next"
-             />
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/buttonPrevious"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottomx"
+        app:layout_constraintRight_toLeftOf="@id/buttonPlay"
+        android:background="@android:color/black"
+        android:foreground="@android:drawable/ic_media_previous"
+        />
+
+    <Button
+        android:id="@+id/buttonPlay"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        app:layout_constraintLeft_toRightOf="@id/buttonPrevious"
+        app:layout_constraintRight_toLeftOf="@id/buttonNext"
+        app:layout_constraintBottom_toTopOf="@id/bottomx"
+        android:background="@android:color/black"
+        android:foreground="@android:drawable/ic_media_play" />
+
+    <Button
+        android:id="@+id/buttonNext"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        app:layout_constraintLeft_toRightOf="@id/buttonPlay"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottomx"
+        android:background="@android:color/black"
+        android:foreground="@android:drawable/ic_media_next" />
+
+    <TextView
+        android:id="@+id/bottomx"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="Playlist"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
