--- a/app/src/main/res/layout/album_detail.xml
+++ b/app/src/main/res/layout/album_detail.xml
@@ -20,7 +20,7 @@
         android:padding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/artist"
@@ -40,8 +40,7 @@
         android:padding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/artist"
-        />
+        app:layout_constraintTop_toBottomOf="@id/artist" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
