Upgrade to Last kotlin version and gradle build

--- a/app/src/main/res/layout/album_detail.xml
+++ b/app/src/main/res/layout/album_detail.xml
@@ -42,5 +42,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/artist" />
 
+    <TextView
+        android:id="@+id/date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="xxx"
+        android:padding="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/album" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
